This file documents the revision history for the Open Monitoring Distribution (Labs Edition)

next:
          - OMD:
            - omd cleanup will keep current default version installed
          - Grafana update to 6.2.4
          - Prometheus update to 2.10.0
          - Mod-Gearman update 3.1.0
          - LMD: Update 1.6.0

3.10     May 16 2019
          - Thruk: update to 2.30-2
          - Grafana update to 6.1.6
          - Prometheus update to 2.9.2:
            - Alertmanager update to 0.17.0
            - Pushgateway update to 0.8.0
            - blackbox_exporter update to 0.14.0
            - Add Thanos download script for version 0.4.0
          - InfluxDB: update to 1.7.6
          - Go updated to 1.12.5
          - Mod-Gearman update 3.0.9
          - python modules: added decorator and jsonpath-ng
          - Ansible 2.7.10
          - check_nsc_web: update to 0.5.3


3.00     Apr 01 2019
          - DEPRECATION WARNING: the following components got removed, read more on https://labs.consol.de/omd/migration_3.html
            - Nagios 3
            - Icinga 1
            - CheckMK
            - Nagvis
          - OMD:
            - removed icinga1
            - removed nagvis
            - removed check_mk
            - removed dataScryer
            - removed nagios3
          - Naemon:
            - update core to 1.0.10
            - update livestatus to 1.0.10
          - Thruk: update to 2.28
          - Mod-Gearman:
            - update mod-gearman-worker-go to 1.1.1
            - update 3.0.8
          - LMD: Update 1.5.0
          - check_nsc_web: update to 0.5.2
          - Ansible 2.7.9
          - Prometheus: update to 2.8.1
            - Alertmanager update to 0.16.1
            - Thanos update to 0.3.1
          - Grafana update to 6.0.2
          - InfluxDB: update to 1.7.3
          - Go updated to 1.11.6
            - Add Go 1.12.1


2.90     Dec 19 2018
          - OMD:
            - create random omdadmin password on omd create