@@ -1,0 +1,136 @@
+DISTRO_CODE       = fc30
+BUILD_PACKAGES    =
+BUILD_PACKAGES   += boost
+BUILD_PACKAGES   += boost-devel
+BUILD_PACKAGES   += curl-devel     # needed by perl modules / thruk
+BUILD_PACKAGES   += expat-devel
+BUILD_PACKAGES   += fping
+BUILD_PACKAGES   += bind-utils
+BUILD_PACKAGES   += bison  # icinga 2
+BUILD_PACKAGES   += flex   # icinga 2
+BUILD_PACKAGES   += cmake  # icinga 2
+BUILD_PACKAGES   += gcc
+BUILD_PACKAGES   += gcc-c++
+BUILD_PACKAGES   += glibc-devel
+BUILD_PACKAGES   += gperf
+BUILD_PACKAGES   += help2man    # required by naemon
+BUILD_PACKAGES   += libevent-devel         # RHEL Server Optional
+BUILD_PACKAGES   += libdbi-devel           # required for rrdtool
+BUILD_PACKAGES   += libtool-ltdl-devel     # RHEL Server Optional 
+BUILD_PACKAGES   += libtool-ltdl           # needed by libtool-ltdl-devel
+BUILD_PACKAGES   += libstdc++-static       # required by mk-livestatus
+BUILD_PACKAGES   += gd-devel               # RHEL Server Optional
+BUILD_PACKAGES   += libXpm-devel           # needed by gd-devel
+BUILD_PACKAGES   += libjpeg-devel          # needed by gd-devel
+BUILD_PACKAGES   += httpd-devel
+BUILD_PACKAGES   += libmcrypt-devel        # MISSING
+BUILD_PACKAGES   += libxml2-devel
+BUILD_PACKAGES   += libcom_err-devel       # freetds
+BUILD_PACKAGES   += mariadb-devel
+BUILD_PACKAGES   += mariadb-errmsg
+BUILD_PACKAGES   += postgresql-devel
+BUILD_PACKAGES   += ncurses-devel
+BUILD_PACKAGES   += net-snmp
+BUILD_PACKAGES   += net-snmp-utils
+BUILD_PACKAGES   += net-snmp-devel
+BUILD_PACKAGES   += openssl-devel
+BUILD_PACKAGES   += pango-devel
+BUILD_PACKAGES   += patch
+BUILD_PACKAGES   += php
+BUILD_PACKAGES   += postgresql-devel   # icinga 2
+BUILD_PACKAGES   += python-devel
+BUILD_PACKAGES   += python2
+BUILD_PACKAGES   += readline-devel
+BUILD_PACKAGES   += rpm-build
+BUILD_PACKAGES   += samba-client
+BUILD_PACKAGES   += libuuid-devel
+BUILD_PACKAGES   += libicu-devel # naemon-livestatus
+BUILD_PACKAGES   += libstdc++-devel
+BUILD_PACKAGES   += gcc-c++
+BUILD_PACKAGES   += pkgconfig
+BUILD_PACKAGES   += libtool
+BUILD_PACKAGES   += which
+BUILD_PACKAGES   += perl-devel
+BUILD_PACKAGES   += perl-libs
+BUILD_PACKAGES   += perl-Storable
+BUILD_PACKAGES   += perl-ExtUtils-Embed
+BUILD_PACKAGES   += perl-Test-Simple
+BUILD_PACKAGES   += perl-Module-Build
+BUILD_PACKAGES   += perl-Time-HiRes
+BUILD_PACKAGES   += perl-Locale-Maketext-Simple
+BUILD_PACKAGES   += perl-IO-Zlib
+BUILD_PACKAGES   += perl-CPAN
+BUILD_PACKAGES   += perl-autodie
+BUILD_PACKAGES   += perl-Attribute-Handlers
+BUILD_PACKAGES   += rsync
+BUILD_PACKAGES   += radcli-devel
+BUILD_PACKAGES   += automake
+BUILD_PACKAGES   += libsmbclient-devel
+OS_PACKAGES       =
+OS_PACKAGES      += time # needed for mk-job
+OS_PACKAGES      += traceroute # needed for Check_MK parent scan
+OS_PACKAGES      += boost-program-options
+OS_PACKAGES      += boost-date-time  # icinga 2
+OS_PACKAGES      += boost-regex      # icinga 2
+OS_PACKAGES      += boost-thread     # icinga 2
+OS_PACKAGES      += boost-system     # mod-gearman
+OS_PACKAGES      += curl
+OS_PACKAGES      += dialog
+OS_PACKAGES      += expat
+OS_PACKAGES      += fping
+OS_PACKAGES      += graphviz
+OS_PACKAGES      += graphviz-gd
+OS_PACKAGES      += httpd
+OS_PACKAGES      += libevent
+OS_PACKAGES      += libdbi
+OS_PACKAGES      += libicu
+OS_PACKAGES      += libmcrypt
+OS_PACKAGES      += libtool-ltdl
+OS_PACKAGES      += mod_fcgid
+OS_PACKAGES      += mod_ssl
+OS_PACKAGES      += mariadb-server
+OS_PACKAGES      += net-snmp
+OS_PACKAGES      += net-snmp-utils
+OS_PACKAGES      += net-tools
+OS_PACKAGES      += pango
+OS_PACKAGES      += patch
+OS_PACKAGES      += perl-Net-SNMP
+OS_PACKAGES      += perl-Locale-Maketext-Simple
+OS_PACKAGES      += perl-IO-Zlib
+OS_PACKAGES      += perl-CPAN
+OS_PACKAGES      += perl-Devel-PPPort
+OS_PACKAGES      += perl-Parse-RecDescent
+OS_PACKAGES      += perl-autodie
+OS_PACKAGES      += perl-Attribute-Handlers
+OS_PACKAGES      += php
+OS_PACKAGES      += php-mbstring
+OS_PACKAGES      += php-pdo
+OS_PACKAGES      += php-gd
+OS_PACKAGES      += php-json
+OS_PACKAGES      += php-simplexml
+OS_PACKAGES      += readline
+OS_PACKAGES      += rsync
+OS_PACKAGES      += uuid
+OS_PACKAGES      += xinetd
+OS_PACKAGES      += cronie
+OS_PACKAGES      += python-ldap # needed for ldap support in multisite
+OS_PACKAGES      += python2
+OS_PACKAGES      += libsmbclient
+USERADD_OPTIONS   = -M
+ADD_USER_TO_GROUP = gpasswd -a %(user)s %(group)s
+PACKAGE_INSTALL   = yum -y makecache ; yum -y install
+ACTIVATE_INITSCRIPT = chkconfig --add %s && chkconfig %s on
+APACHE_CONF_DIR   = /etc/httpd/conf.d
+APACHE_INIT_NAME  = httpd
+APACHE_USER       = apache
+APACHE_GROUP      = apache
+APACHE_BIN        = /usr/sbin/httpd
+APACHE_CTL        = /usr/sbin/apachectl
+APACHE_MODULE_DIR = /usr/lib/httpd/modules
+APACHE_MODULE_DIR_64 = /usr/lib64/httpd/modules
+APACHE_FCGID_MODULE = mod_fcgid.so
+PHP_FCGI_BIN      = /usr/bin/php-cgi
+APACHE_ENMOD      = true %s
+BECOME_ROOT       = su -c
+MOUNT_OPTIONS     =
+INIT_CMD          = /usr/bin/systemctl %(action)s %(name)s.service
